--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ a:hover {
   border: solid 1px var(--main-color);
 }
 .product .btn {
-  transition: transform 1s, opacity 1s;
+  transition: transform 0.35s, opacity 0.35s;
   transform: translateY(100%);
   opacity: 0;
 }
@@ -68,4 +68,12 @@ a:hover {
 
 .slick-slide div {
   outline: none;
+}
+
+.fit-content {
+  width: fit-content;
+}
+
+.margin-top-58 {
+  margin-top: 58px;
 }
